<resources>
    <string name="app_name">NoYakJa</string>
    <string name="calender_title">복 약 일 지</string>
    <string name="username"> 님,</string>
    <string name="morning">아침</string>
    <string name="lunch">점심</string>
    <string name="dinner">저녁</string>
    <string name="calender_information">▲ 터치하여 자세히 확인 </string>
    <string name="time_setting_button">복약 시간 설정</string>
    <string name="guardian_setting_button">보호자 연락처 설정</string>
    <string name="add">추가</string>
    <string name="delete">삭제</string>
    <string name="phone_auth_title">로그인</string>
    <string name="auth_button">인증하기</string>
    <string name="login_failed">로그인 실패</string>
    <string name="send_complete">인증번호 전송 완료</string>
    <string name="rewrite_phone">전화번호가 정확한지 확인해주세요</string>
    <string name="phone_hint">01000000000</string>
    <string name="user_info_title">회원정보 입력</string>
    <string name="invalid_name">이름을 다시 입력하세요</string>
    <string name="guardian_add_title">보호자 연락처 추가</string>
    <string name="name">이름</string>
    <string name="phone">전화번호</string>
    <string name="text_hint">이 곳을 눌러 입력</string>
    <string name="put_text_success">입력 완료</string>
    <string name="medicine_time">복약시간</string>
    <string name="medicine_count">복약횟수</string>
    <string name="medicine_setting_complete">시간 설정 완료</string>
</resources>