<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuardianSettingActivity">

    <TextView
        android:id="@+id/guardian_setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/chosun_nm"
        android:text="@string/guardian_setting_button"
        android:textColor="@color/text_gray"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="68dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/guardian_setting_delete_button"
        android:fontFamily="@font/chosun_nm"
        android:text="@string/delete"
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/guardian_setting_title"
        app:layout_constraintTop_toBottomOf="@+id/guardian_setting_title" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="68dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/guardian_setting_add_button"
        android:fontFamily="@font/chosun_nm"
        android:text="@string/add"
        android:textColor="@color/blue"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/guardian_setting_title" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView2"
            android:name="com.cauiot.noyakja.GuardianFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>