<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userInfoActivity">

    <TextView
        android:id="@+id/invalid_name_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/chosun_nm"
        android:paddingBottom="5dp"
        android:text="@string/invalid_name"
        android:textColor="@color/red"
        android:textSize="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/list_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_info_title">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/box_background"
            android:gravity="center">

            <TextView
                android:id="@+id/auth_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chosun_nm"
                android:gravity="center"
                android:padding="5dp"
                android:text="전화번호"
                android:textColor="@color/text_gray"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chosun_nm"
                android:gravity="center"
                android:text="@string/phone_hint"
                android:textColor="@color/text_gray"
                android:textSize="18dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/box_background"
            android:gravity="center">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chosun_nm"
                android:gravity="center"
                android:padding="5dp"
                android:text="이름"
                android:textColor="@color/text_gray"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/name_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/chosun_nm"
                android:gravity="center"
                android:inputType="phone"
                android:textColor="@color/text_gray"
                android:textSize="18dp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/info_complete_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/time_setting_button_background"
        android:fontFamily="@font/chosun_nm"
        android:text="입력완료"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/user_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/chosun_nm"
        android:text="@string/user_info_title"
        android:textColor="@color/text_gray"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>