<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/chosun_nm"
        android:text="@string/phone_auth_title"
        android:textColor="@color/text_gray"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:id="@+id/send_complete_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chosun_nm"
                android:paddingBottom="5dp"
                android:text="@string/send_complete"
                android:textColor="@color/blue"
                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/box_background"
            android:gravity="center">

            <TextView
                android:id="@+id/phone_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chosun_nm"
                android:gravity="center"
                android:text="전화번호"
                android:textColor="@color/text_gray"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/phone_number_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/chosun_nm"
                android:gravity="center"
                android:inputType="phone" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <Button
                android:id="@+id/auth_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/time_setting_button_background"
                android:fontFamily="@font/chosun_nm"
                android:onClick="auth"
                android:text="@string/auth_button"
                android:textColor="@color/text_gray"
                android:textSize="14dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/box_background"
            android:gravity="center">

            <TextView
                android:id="@+id/auth_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chosun_nm"
                android:gravity="center"
                android:text="인증번호"
                android:textColor="@color/text_gray"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/auth_number_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/chosun_nm"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/time_setting_button_background"
                android:fontFamily="@font/chosun_nm"
                android:onClick="check_auth"
                android:text="확인"
                android:textColor="@color/text_gray"
                android:textSize="14dp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>